express-reliability-platform-v05/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: platform-ingress
  namespace: reliability
  annotations:
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/scheme: "internet-facing"   # Public ALB
    alb.ingress.kubernetes.io/target-type: "ip"           # Route to Pod IPs
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: { name: web-ui, port: { number: 8080 } }
          - path: /api/health
            pathType: Prefix
            backend:
              service: { name: node-api, port: { number: 3000 } }
          - path: /api/score
            pathType: Prefix
            backend:
              service: { name: flask-api, port: { number: 5000 } }
